--- a/part_1.ipynb
+++ b/part_1.ipynb
@@ -10,7 +10,7 @@
     "2019-2020 \n",
     "\n",
     "\n",
-    "<h1 style=\"color:#990000;text-align: center\"> Assignement 1 : ANALYSE LINUX GRAPH </h1>\n",
+    "<h1 style=\"color:#990000;text-align: center\"> Part 1 : ANALYSE LINUX GRAPH </h1>\n",
     "    <h4 style=\"color:#00b00;text-align: center\"> Souad BOUTANE</h4> \n",
     "   \n",
     "\n",
@@ -18,7 +18,7 @@
     "\n",
     "<h2 style=\"color:#990000\">I. INTRODUCTION </h2>\n",
     "\n",
-    "The aim of this homework is to analyse a realistic network, by building the graph and computing all the metrics discussed in class, using the following technologies and materials:\n",
+    "The aim of this part is to analyse a realistic network, by building the graph and computing all the metrics discussed in class, using the following technologies and materials:\n",
     "\n",
     "    >Python    : programming language\n",
     "    >NetwokX   : python library to manipulate graphs\n",
