--- a/part_2.ipynb
+++ b/part_2.ipynb
@@ -10,7 +10,7 @@
     "2018-2019 \n",
     "\n",
     "\n",
-    "<h1 style=\"color:#990000;text-align: center\"> Assignement 2 : NETWORK ROBUSTNESS </h1>\n",
+    "<h1 style=\"color:#990000;text-align: center\"> Part 2 : NETWORK ROBUSTNESS </h1>\n",
     "    <h4 style=\"color:#00b00;text-align: center\"> Souad BOUTANE</h4> \n",
     "   \n",
     "\n",
@@ -19,7 +19,7 @@
     "<h3 style=\"color:#990000\">. INTRODUCTION </h3>\n",
     "\n",
     "\n",
-    "The aim of this homework is investigate the robustness of networks by simulating random failures and target attacks. The assignment is composed of two parts:\n",
+    "The aim of this part is to investigate the robustness of networks by simulating random failures and target attacks. The assignment is composed of two parts:\n",
     "\n",
     "    >Part 1: Use synthetic graphs\n",
     "    >Part 2: Use LINUX graph\n",
