--- a/part_3.ipynb
+++ b/part_3.ipynb
@@ -10,7 +10,7 @@
     "2018-2019 \n",
     "\n",
     "\n",
-    "<h1 style=\"color:#990000;text-align: center\"> Assignement 3 : SOCIAL CONTAGION  </h1>\n",
+    "<h1 style=\"color:#990000;text-align: center\"> Part 3 : SOCIAL CONTAGION  </h1>\n",
     "    <h4 style=\"color:#00b00;text-align: center\"> Souad BOUTANE</h4> \n",
     "   \n",
     "\n",
@@ -19,7 +19,7 @@
     "<h3 style=\"color:#990000\">. INTRODUCTION </h3>\n",
     "\n",
     "\n",
-    "The aim of this homework is to investigate the social contagion in a network by implementing the networked coordination game as described in class:\n",
+    "The aim of this part is to investigate the social contagion in a network by implementing the networked coordination game as described in class:\n",
     "\n",
     "1- First we generate graph  \n",
     "\n",
